@@ -14,6 +14,7 @@
 #include "fontdata.h"
 #include "settings.h"
 #include "theme.h"
+#include "utils.h"
 #include "xconnection.h"
 
 using std::string;
@@ -672,9 +673,35 @@ void Decoration::drawText(Pixmap& pix, GC& gc, const FontData& fontData, const C
     // shorten the text first:
     size_t textLen = text.size();
     int textwidth = fontData.textwidth(text, textLen);
-    while (textLen > 0 && textwidth > width) {
-        textLen--;
-        textwidth = fontData.textwidth(text, textLen);
+    string with_ellipsis; // declaration here for sufficently long lifetime
+    const char* final_c_str = nullptr;
+    if (textwidth <= width) {
+        final_c_str = text.c_str();
+    } else {
+        // shorten title:
+        with_ellipsis = text + settings_.ellipsis();
+        // temporarily, textLen is the length of the text surviving from the
+        // original window title
+        while (textLen > 0 && textwidth > width) {
+            textLen--;
+            // remove the (multibyte-)character that ends at with_ellipsis[textLen]
+            size_t character_width = 1;
+            while (textLen > 0 && utf8_is_continuation_byte(with_ellipsis[textLen])) {
+                textLen--;
+                character_width++;
+            }
+            // now, textLen points to the first byte of the (multibyte-)character
+            with_ellipsis.erase(textLen, character_width);
+            textwidth = fontData.textwidth(with_ellipsis, with_ellipsis.size());
+        }
+        // make textLen refer to the actual string and shorten further if it
+        // is still too wide:
+        textLen = with_ellipsis.size();
+        while (textLen > 0 && textwidth > width) {
+            textLen--;
+            textwidth = fontData.textwidth(with_ellipsis, textLen);
+        }
+        final_c_str = with_ellipsis.c_str();
     }
     switch (align) {
     case TextAlign::left: break;
@@ -696,19 +723,19 @@ void Decoration::drawText(Pixmap& pix, GC& gc, const FontData& fontData, const C
         XftColorAllocValue(display, xftvisual, xftcmap, &xrendercol, &xftcol);
         XftDrawStringUtf8(xftd, &xftcol, fontData.xftFont_,
                        position.x, position.y,
-                       (const XftChar8*)text.c_str(), textLen);
+                       (const XftChar8*)final_c_str, textLen);
         XftDrawDestroy(xftd);
         XftColorFree(display, xftvisual, xftcmap, &xftcol);
     } else if (fontData.xFontSet_) {
         XSetForeground(display, gc, get_client_color(color));
         XmbDrawString(display, pix, fontData.xFontSet_, gc, position.x, position.y,
-                text.c_str(), textLen);
+                final_c_str, textLen);
     } else if (fontData.xFontStruct_) {
         XSetForeground(display, gc, get_client_color(color));
         XFontStruct* font = fontData.xFontStruct_;
         XSetFont(display, gc, font->fid);
         XDrawString(display, pix, gc, position.x, position.y,
-                text.c_str(), textLen);
+                final_c_str, textLen);
     }
 }
 
